--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.epam.homework1</groupId>
-    <artifactId>homework1</artifactId>
+    <groupId>com.epam</groupId>
+    <artifactId>homework</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -19,6 +19,7 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.9</version>
         </dependency>
+
     </dependencies>
 
 
