--- a/homework-spring/src/main/resources/application.yml
+++ b/homework-spring/src/main/resources/application.yml
@@ -9,3 +9,18 @@ info:
     descrption: "Application for homework"
     version: 1.0.0
 
+logging:
+  level:
+    org.springframework.orm.jpa: DEBUG
+    org.springframework.transaction: DEBUG
+
+spring:
+  datasource:
+    url: 'jdbc:mysql://localhost:3306/springHW?createDatabaseIfNotExist=true'
+    username: 'root'
+    password: 'root'
+  jpa:
+    database-platform: 'org.hibernate.dialect.MySQL5Dialect'
+    hibernate:
+      ddl-auto: create
+    show-sql: true
