--- a/homework-spring/src/main/resources/application.yml
+++ b/homework-spring/src/main/resources/application.yml
@@ -20,7 +20,12 @@ spring:
     username: 'root'
     password: 'root'
   jpa:
-    database-platform: 'org.hibernate.dialect.MySQL5Dialect'
+    database-platform: 'org.hibernate.dialect.MySQL5InnoDBDialect'
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
+
+app:
+  user:
+    password: password
+    email: email@email.com
