--- a/homework-spring/src/main/resources/application.yml
+++ b/homework-spring/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
   jpa:
     database-platform: 'org.hibernate.dialect.MySQL5InnoDBDialect'
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
 
 app:
